==========================
DictionaryReader Changelog
==========================

Jun 18 2006 Guenther Noack
	* Added code which is intended to fix the 'bad dictionary names'
	  bug listed in the TODO list.
	
May 22 2006 Guenther Noack
	* Fixed the bug that made the window stay hidden even when a new
	  lookup was invoked.
	
May 21 2006 Yen-Ju
	* Fix a typo.

May 10 2006 Guenther Noack
	* Applied patch by Chris B. Vetter that provides a Service
	  to look up words with DictionaryReader
 
Mar 30 2006 Yen-Ju
	* Use GNUstep-make to compile on Cocoa.
	* Make link work.

Apr 2 2006 Guenther Noack
	* More patches by Chris B. Vetter:
	* Results scroll to top after each query
	* Dictionary name extraction improved (numbers are cut)

Apr 2 2006 Guenther Noack
	* Defaults now used for Dict server finding:
	  Use the "Dict Server" default for it.
	  Applied the patch by Chris B. Vetter
	
Apr 2 2006 Guenther Noack
	* Link ability added
	
Apr 1 2006 Guenther Noack
	* Convenience methods added to NSString
	* Notifications are now used for the coordination of
	  search invocations from different 'sources' (GUI, links)
	* Prepared for Links

Mar 30 2006 Yen-Ju
    * Work on Cocoa.

Mar 30 2006 Guenther Noack
    * Initial commit to Etoile SVN
    
	